Adding xxlarge breakpoint.

--- a/src/_patterns/01-core/01-settings/settings-breakpoints/_settings.breakpoints.scss
+++ b/src/_patterns/01-core/01-settings/settings-breakpoints/_settings.breakpoints.scss
@@ -19,7 +19,8 @@ $bolt-breakpoints: (
   small:   600px,
   medium:  800px,
   large:   1000px,
-  xlarge:  1200px
+  xlarge:  1200px,
+  xxlarge: 1400px
 );
 
 
