--- a/src/_patterns/01-core/05-objects/02-layout/bolt-wrapper/src/wrapper.scss
+++ b/src/_patterns/01-core/05-objects/02-layout/bolt-wrapper/src/wrapper.scss
@@ -4,7 +4,7 @@
 @import '@bolt/tools-spacing';
 @import '@bolt/settings-breakpoints';
 
-$bolt-wrapper--max-width: 1400px !default;
+$bolt-wrapper--max-width: bolt-breakpoint(xxlarge) !default;
 
 .o-bolt-wrapper {
   @include bolt-padding-left(medium);
