--- a/src/_patterns/02-components/bolt-ordered-list/src/ordered-list.scss
+++ b/src/_patterns/02-components/bolt-ordered-list/src/ordered-list.scss
@@ -10,7 +10,7 @@ $bolt-ordered-list-border-color: currentColor; // TODO: needs to map this to the
 
 
 .c-bolt-ordered-list {
-  @include bolt-margin(0);
+  @include bolt-margin-left(0);
   @include bolt-padding(0);
 
   list-style: none;
