--- a/src/styles/_components.all.scss
+++ b/src/styles/_components.all.scss
@@ -6,6 +6,7 @@
 @import '@bolt/components-band';
 @import '@bolt/components-button';
 @import '@bolt/components-button-group';
+@import '@bolt/components-blockquote';
 @import '@bolt/components-card';
 @import '@bolt/components-chip';
 @import '@bolt/components-background';
