fix: fixing bugs with new image component. integrated w/ background component. fixed ui-list sizes

--- a/src/_patterns/02-components/bolt-background/demo/background.demo.twig
+++ b/src/_patterns/02-components/bolt-background/demo/background.demo.twig
@@ -6,7 +6,9 @@
   contentTag: "figcaption"
 } %}
   {% block band_background %}
-    {% include "@bolt/background.twig" %}
+    {% if background %}
+      {% include "@bolt/background.twig" with background only %}
+    {% endif %}
   {% endblock band_background %}
 
   {% block band_content %}
