--- a/src/_patterns/02-components/bolt-background/src/background.twig
+++ b/src/_patterns/02-components/bolt-background/src/background.twig
@@ -42,7 +42,8 @@
             {% include "@bolt/#{item.name}.twig" with item | merge({
               attributes: {
                 class: ["c-bolt-background__#{item.name}"]
-              }
+              },
+              ratio: false
             }) only %}
           {% endif %}
         {% endfor %}
