--- a/src/_patterns/01-core/05-objects/01-lists/bolt-ui-list/src/ui-list.scss
+++ b/src/_patterns/01-core/05-objects/01-lists/bolt-ui-list/src/ui-list.scss
@@ -8,7 +8,13 @@
  * The UI list object creates blocky list items with a separator between each
  * item
  */
-$bolt-ui-list-padding: (medium 0) !default;
+
+$bolt-ui-list-padding--collapsed: (0) !default;
+$bolt-ui-list-padding--xsmall: (xsmall 0) !default;
+$bolt-ui-list-padding--small: (small 0) !default;
+$bolt-ui-list-padding--medium: (medium 0) !default;
+$bolt-ui-list-padding--large: (large 0) !default;
+
 $bolt-ui-list-border-width: 1px !default;
 $bolt-ui-list-border-style: solid !default;
 $bolt-ui-list-border-color: var(--bolt-ui-border-color, currentColor);
@@ -20,7 +26,6 @@ $bolt-ui-list-border-color: var(--bolt-ui-border-color, currentColor);
 }
 
 .o-bolt-ui-list__item {
-  @include bolt-padding($bolt-ui-list-padding);
   position: relative;
 
   &:after {
@@ -44,6 +49,29 @@ $bolt-ui-list-border-color: var(--bolt-ui-border-color, currentColor);
     margin-bottom: 0;
   }
 }
+
+.o-bolt-ui-list,
+.o-bolt-ui-list--medium > .o-bolt-ui-list__item {
+  @include bolt-padding($bolt-ui-list-padding--medium);
+}
+
+// Remove all padding
+.o-bolt-ui-list--collapsed > .o-bolt-ui-list__item {
+  @include bolt-padding($bolt-ui-list-padding--collapsed);
+}
+
+.o-bolt-ui-list--xsmall > .o-bolt-ui-list__item {
+  @include bolt-padding($bolt-ui-list-padding--xsmall);
+}
+
+.o-bolt-ui-list--small > .o-bolt-ui-list__item {
+  @include bolt-padding($bolt-ui-list-padding--small);
+}
+
+.o-bolt-ui-list--large > .o-bolt-ui-list__item {
+  @include bolt-padding($bolt-ui-list-padding--large);
+}
+
 
 .o-bolt-ui-list--borderless {
   --bolt-ui-border-color: transparent;
