--- a/src/_patterns/02-components/bolt-headline/src/_typography.twig
+++ b/src/_patterns/02-components/bolt-headline/src/_typography.twig
@@ -1,4 +1,4 @@
-{% set tags = ["h1", "h2", "h3", "h4", "h5", "h6", "p", "span"] %} {# Allowed Tags #}
+{% set tags = "any" %} {# Allowed Tags #}
 {% set weights = ["bold", "regular", "semibold"] %} {# Allowed Weights #}
 {% set types = ["headline", "subheadline", "eyebrow", "text"] %} {# Pre-defined types #}
 {% set transformProps = ["none", "uppercase", "lowercase", "capitalize"] %} {# Pre-defined text transform options #}
@@ -19,7 +19,7 @@
 
 
 
-{% set tag = tag in tags ? tag : _defaultTag %}
+{% set tag = tag in tags or tags == "any" ? tag : _defaultTag %}
 {% set weight = weight | default(_defaultWeight) %}
 {% set type = type in types ? type : _defaultType %}
 {% set size = size | default(_defaultSize) %}
