--- a/src/_patterns/02-components/bolt-headline/src/headline.twig
+++ b/src/_patterns/02-components/bolt-headline/src/headline.twig
@@ -1,5 +1,14 @@
 {% extends "@bolt/_typography.twig" %}
 {% set type = "headline" %}
+{% set tags = [
+  "h1",
+  "h2",
+  "h3",
+  "h4",
+  "h5",
+  "h6",
+  "p",
+] %}
 {% set sizes = [
   "xsmall",
   "small",
