WIP: blockquote twig

--- a/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
+++ b/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
@@ -2,22 +2,24 @@
    Blockquote
 \* ------------------------------------ */
 
+$bolt-blockquote-border-width: 0.25rem;
+$bolt-blockquote-border-style: $bolt-border-style;
+$bolt-blockquote-border-color: currentColor; // TODO: needs to map this to theme text color at 0.1 opacity.
+
 .c-bolt-blockquote {
   @include bolt-padding(0 medium);
 
-  border-left-width: .25rem;
-  border-left-style: solid;
-  border-left-color: bolt-color(teal);
+  color: var(--bolt-color-heading, bolt-color(indigo)); // TODO: refactor this after theming is done.
+  border-left-width: $bolt-blockquote-border-width;
+  border-left-style: $bolt-blockquote-border-style;
+  border-left-color: $bolt-blockquote-border-color;
 }
 
 .c-bolt-blockquote__quote {
   @include bolt-margin-bottom(medium);
-  @include bolt-font-size(large);
-  @include bolt-font-weight(semibold);
 
   display: block;
   position: relative;
-  color: var(--bolt-color-heading, bolt-color(indigo)); // TODO: refactor this after theming is done.
 
   > *:first-child:before,
   > *:first-child:after {
@@ -27,12 +29,12 @@
 
   > *:first-child:before {
     content: '\201C';
-    transform: translate3d(-105%, 0 ,0);
+    transform: translate3d(-130%, 0 ,0);
   }
 
   > *:last-child:after {
     content: '\201D';
-    transform: translate3d(5%, 0 ,0);
+    transform: translate3d(30%, 0 ,0);
   }
 }
 
@@ -42,15 +44,15 @@
 
 .c-bolt-blockquote__footer-item {
   display: block;
+  font-style: inherit;
 }
 
-.c-bolt-blockquote__footer-item--cite {
+.c-bolt-blockquote__footer-item--author {
   @include bolt-font-weight(semibold);
 
-  color: var(--bolt-color-heading, bolt-color(indigo)); // TODO: refactor this after theming is done.
   font-style: normal;
 }
 
-.c-bolt-blockquote__footer-item--text {
+.c-bolt-blockquote__footer-item--association {
   font-style: italic;
 }
