--- a/src/_patterns/02-components/bolt-headline/src/all-headlines.scss
+++ b/src/_patterns/02-components/bolt-headline/src/all-headlines.scss
@@ -249,3 +249,14 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
 .c-bolt-text--semibold {
   @include bolt-font-weight(semibold);
 }
+
+
+
+
+.c-bolt-text--normal {
+  font-style: normal;
+}
+
+.c-bolt-text--italic {
+  font-style: italic;
+}
