--- a/src/_patterns/02-components/bolt-headline/src/text.twig
+++ b/src/_patterns/02-components/bolt-headline/src/text.twig
@@ -2,5 +2,7 @@
 {% set type = "text" %}
 {% set tag = tag | default("p") %}
 {% set weights = ["regular", "bold", "semibold"] %}
+{% set styles = ["normal", "italic"] %}
 {% set size = size | default("medium") %}
 {% set weight = weight | default("regular") %}
+{% set style = style | default("normal") %}
