fix: fixing default headline and subheadline tags

--- a/src/_patterns/01-core/05-objects/01-lists/bolt-ui-list/src/ui-list.scss
+++ b/src/_patterns/01-core/05-objects/01-lists/bolt-ui-list/src/ui-list.scss
@@ -50,7 +50,7 @@ $bolt-ui-list-border-color: var(--bolt-ui-border-color, currentColor);
   }
 }
 
-.o-bolt-ui-list,
+.o-bolt-ui-list > .o-bolt-ui-list__item,
 .o-bolt-ui-list--medium > .o-bolt-ui-list__item {
   @include bolt-padding($bolt-ui-list-padding--medium);
 }
