chore: cleaning up PL

--- a/src/_patterns/01-core/05-objects/01-lists/bolt-inline-list/src/inline-list.twig
+++ b/src/_patterns/01-core/05-objects/01-lists/bolt-inline-list/src/inline-list.twig
@@ -28,10 +28,7 @@
 ] %}
 
 {% if items %}
-  <bolt-inline-list
-    size="{{ size }}"
-    bolt-object
-  >
+  <bolt-inline-list size="{{ size }}" bolt-object>
     <{{ tag }} {{ attributes.addClass(classes) }}>
       {% for item in items %}
         <li class="{{ "#{baseClass}__item" }}">
