--- a/src/_patterns/02-components/bolt-image/src/image.twig
+++ b/src/_patterns/02-components/bolt-image/src/image.twig
@@ -25,7 +25,7 @@
 {% set imageWidth = imagesize(src) %}
 
 {# By default, include a ratio unless set to false #}
-{% set ratio = (ratio == "false" ? false : true) %}
+{% set ratio = ratio is defined and ratio == false ? false : true %}
 
 {# macro srcset(srcset, imageWidth, path, ext, sizes) #}
   {% if srcset == "" and ext != "svg" %}
@@ -70,7 +70,7 @@
 
 
 {% if shouldLazyload %}
-  {% set imgTagAttributes = imgTagAttributes.setAttribute("data-srcset", srcset) %}
+  {% set imgTagAttributes = imgTagAttributes.setAttribute("data-srcset", srcset).setAttribute("srcset", placeholderDummySrc).setAttribute("data-sizes", "auto") %}
 {% else %}
   {% set imgTagAttributes = imgTagAttributes.setAttribute("srcset", srcset) %}
 {% endif %}
@@ -93,7 +93,7 @@
 {% set imageTag %}
   <img {{ imgTagAttributes }}>
   <noscript>
-    <img {{ imgTagAttributes.removeClass(["js-lazyload", "is-lazyloading"]) }}>
+    <img {{ imgTagAttributes.removeClass(["js-lazyload", "is-lazyloading"]).setAttribute("srcset", srcset) }}>
   </noscript>
 {% endset %}
 
