fix: fixing merge issues + bugs. updating new card to support previous data structure

--- a/src/_patterns/01-core/04-elements/elements-all/_elements.all.scss
+++ b/src/_patterns/01-core/04-elements/elements-all/_elements.all.scss
@@ -10,3 +10,7 @@
 @import '@bolt/elements-paragraphs';
 @import '@bolt/elements-small';
 @import '@bolt/elements-tables';
+
+hr {
+  opacity: 0.8;
+}
