--- a/src/_patterns/01-core/05-objects/01-lists/bolt-inline-list/src/inline-list.scss
+++ b/src/_patterns/01-core/05-objects/01-lists/bolt-inline-list/src/inline-list.scss
@@ -32,7 +32,7 @@ bolt-inline-list {
 // }
 
 .o-bolt-inline-list__item {
-  @include bolt-font-size(medium);
+  // @include bolt-font-size(medium);
   display: inline-block;
 
   &:before {
