--- a/src/_patterns/02-components/bolt-card/src/card-w-teaser-list.twig
+++ b/src/_patterns/02-components/bolt-card/src/card-w-teaser-list.twig
@@ -1,9 +1,7 @@
 {% extends "@bolt/card.twig" %}
 
 
-{% block card_content %}
-
-
+{% block card_body %}
   {% if teasers %}
     {% set teaserItems = {} %}
     {% set items = [] %}
