--- a/src/_patterns/02-components/bolt-image/src/image.scss
+++ b/src/_patterns/02-components/bolt-image/src/image.scss
@@ -32,7 +32,7 @@ bolt-image {
   // height: 100%;
   // width: 100%;
   pointer-events: none;
-  background-size: 100% auto;
+  background-size: cover;
   background-repeat: no-repeat;
   filter: blur(3px);
 }
