--- a/src/_patterns/04-pages/d8-homepage/d8-homepage.twig
+++ b/src/_patterns/04-pages/d8-homepage/d8-homepage.twig
@@ -141,7 +141,7 @@
       "items": [
         {
           "name": "image",
-          "src": "https://www.pega.com/sites/pega.com/files/thumbnail-forrester-prevcard.jpg"
+          "src": "/images/placeholders/1200x660.jpg"
         },
         {
           "name": "headline",
