fix: ordered list and blockquote revisions

--- a/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
+++ b/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
@@ -4,7 +4,7 @@
 
 $bolt-blockquote-border-width: 0.25rem;
 $bolt-blockquote-border-style: $bolt-border-style;
-$bolt-blockquote-border-color: currentColor; // TODO: needs to map this to theme text color at 0.1 opacity.
+$bolt-blockquote-border-color: bolt-color(teal); // TODO: needs to map this to theme text color at 0.1 opacity.
 $bolt-blockquote-footer-line-height: $bolt-line-height--tight;
 
 
