--- a/src/_patterns/02-components/bolt-headline/src/lead.twig
+++ b/src/_patterns/02-components/bolt-headline/src/lead.twig
@@ -1,3 +1,10 @@
+{# Sample Usage
+  {% include "@bolt/lead.twig" with {
+    text: "This is a lead paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula."
+  } only %}
+#}
+
+
 {% extends "@bolt/_typography.twig" %}
 {% set type = "lead" %}
 {% set sizes = ["large"] %}
