--- a/src/_patterns/02-components/bolt-ordered-list/src/ordered-list.scss
+++ b/src/_patterns/02-components/bolt-ordered-list/src/ordered-list.scss
@@ -2,7 +2,11 @@
    Ordered List
 \* ------------------------------------ */
 
-/*$bolt-ordered-list-item-number-font-size: xsmall;*/
+@import '@bolt/settings-colors';
+@import '@bolt/settings-font-size';
+@import '@bolt/settings-font-weight';
+@import '@bolt/tools-spacing';
+@import '@bolt/tools-color-palette';
 
 
 .c-bolt-ordered-list {
